modifying handlebars files

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
+	<head>
+		<meta charset="UTF-8">
 		<title>SPRAWL</title>
 	</head>
 	<body>
+		<h1 id="title">SPRAWL</h1>
 		{{{ body }}}
 	</body>
 </html>
